# active-object-pattern

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/: active_object.h
src/: active_object.c  main.c  types.h
tests/: test_active_object.c
tests/unity/: unity.c  unity.h
